--- a/Android Application/app/src/main/res/layout/activity_add_birthday.xml
+++ b/Android Application/app/src/main/res/layout/activity_add_birthday.xml
@@ -24,7 +24,8 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="10"
             android:orientation="horizontal"
             android:weightSum="100">
 
@@ -34,12 +35,12 @@
                 android:layout_weight="8" />
 
 
-            <Button
+            <ImageView
+
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="8"
-                android:background="@mipmap/back"
-                android:orientation="horizontal" />
+                android:background="@mipmap/back" />
 
             <TextView
                 android:layout_width="0dp"
@@ -51,12 +52,11 @@
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
-            <Button
+            <ImageView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="7"
-                android:background="@mipmap/settings"
-                android:orientation="horizontal" />
+                android:layout_weight="10"
+                android:background="@mipmap/settings" />
 
             <Space
                 android:layout_width="0dp"
