--- a/Android Application/app/src/main/res/layout/activity_main.xml
+++ b/Android Application/app/src/main/res/layout/activity_main.xml
@@ -7,51 +7,56 @@
     android:layout_weight="100"
     android:orientation="vertical"
     tools:context=".Management.MainActivity">
+
     <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="8">
+        android:layout_weight="10">
+
         <android.support.design.widget.CoordinatorLayout
             android:layout_width="match_parent"
-            android:paddingEnd="20dp"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_marginTop="5dp"
+            android:paddingEnd="20dp">
 
             <ImageView
+                android:id="@+id/main_setting_icon"
                 android:layout_width="35dp"
-                android:src="@mipmap/settings"
-                android:layout_height="match_parent"
-                android:layout_gravity="end"
-                android:id="@+id/main_setting_icon"/>
+                android:layout_height="wrap_content"
+                android:layout_gravity="end|center_vertical"
+                android:src="@mipmap/settings" />
+
             <TextView
+                android:id="@+id/center_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:text="Up coming"
                 android:textSize="20sp"
-                android:textStyle="bold"
-                android:layout_gravity="center"
-                android:id="@+id/center_text"/>
+                android:textStyle="bold" />
+
             <ImageView
+                android:id="@+id/main_back_icon"
                 android:layout_width="35dp"
-                android:src="@mipmap/balloon"
-                android:layout_height="match_parent"
-                android:layout_gravity="start"
-                android:id="@+id/main_back_icon"/>
+                android:layout_height="wrap_content"
+                android:layout_gravity="start|center_vertical"
+                android:src="@mipmap/balloon" />
         </android.support.design.widget.CoordinatorLayout>
     </android.support.v7.widget.Toolbar>
 
     <fragment
+        android:id="@+id/main_fragment"
+        class="com.seeds.seeds_birthdayreminder.Fragment.DefaultFragmentHomePage"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="85"
-        android:id="@+id/main_fragment"
-        tools:layout="@layout/fragment_default_fragment_home_page"
-        class="com.seeds.seeds_birthdayreminder.Fragment.DefaultFragmentHomePage" />
+        tools:layout="@layout/fragment_default_fragment_home_page" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.2"
-        android:background="@color/grey_b"/>
+        android:background="@color/grey_b" />
 
 
     <LinearLayout
@@ -61,85 +66,47 @@
         android:orientation="horizontal"
         android:weightSum="100">
 
-            <LinearLayout
-                android:layout_width="0dp"
-                android:orientation="vertical"
-                android:layout_height="match_parent"
-                android:onClick="onClick"
-                android:id="@+id/left_fragment_view"
-                android:layout_weight="42.5"
-                android:weightSum="100"
-                >
-                
-                <Space
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="22"/>
+        <LinearLayout
+            android:id="@+id/left_fragment_view"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="42.5"
+            android:onClick="onClick"
+            android:gravity="center"
+            android:weightSum="100">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="55"
-                    android:weightSum="100"
-                    android:orientation="horizontal">
+            <ImageView
+                android:id="@+id/left_layout_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="20"
+                android:src="@mipmap/calendar_green"/>
+        </LinearLayout>
 
-                    <Space
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="40"/>
-
-                    <ImageButton
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:background="@mipmap/birthday_green"
-                        android:layout_weight="20"/>
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-
-            <android.support.design.widget.FloatingActionButton
-                android:layout_width="0dp"
-                android:src="@mipmap/add"
-                android:layout_height="match_parent"
-                android:layout_weight="15"
-                android:id="@+id/add_birthday_icon"/>
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/add_birthday_icon"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="15"
+            android:src="@mipmap/add" />
 
         <LinearLayout
-            android:layout_width="0dp"
-            android:orientation="vertical"
-            android:layout_height="match_parent"
-            android:onClick="onClick"
             android:id="@+id/right_fragment_view"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_weight="42.5"
-            android:weightSum="100"
-            >
+            android:onClick="onClick"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:weightSum="100">
 
-            <Space
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="22"/>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="55"
-                android:weightSum="100"
-                android:orientation="horizontal">
-
-                <Space
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="40"/>
-
-                <ImageButton
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:background="@mipmap/calendar_grey"
-                    android:layout_weight="20"/>
-
-            </LinearLayout>
+            <ImageView
+                android:id="@+id/right_layout_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="20"
+                android:src="@mipmap/calendar_grey" />
 
         </LinearLayout>
 
