--- a/Android Application/app/src/main/res/values/colors.xml
+++ b/Android Application/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="grey_a">#868686</color>
     <color name="grey_b">#b8b8b8</color>
     <color name="grey_c"> #686868</color>
+    <color name="white"> #ffffff</color>
 </resources>
